# iam-policy-evaluator

./: .gitignore  Makefile  README.md  config.yaml.example  pyproject.toml
src/: client.py  helpers.py  tree.py
tests/: trust_tree_test.py
